# python-api-template

./: .coveragerc  .envrc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.yml  Dockerfile  README.md  api.py  app.py  package-lock.json  package.json  policy.yaml  pyproject.toml  template.yaml  test_api.py  tutorial.md
cloudbuild/: container_build.yml
tests/: test_hello.py
