[tool.poetry]
name = "vertex-serving-api"
version = "0.1.0"
description = ""
authors = ["Simon Butt <simon.butt@datatonic.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.2"
pytest-cov = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^3.9.2"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
